* Fix: Fix Qt segmentation fault when canceling out of unconfigured BiT (#1095) (Derek Veit @DerekVeit)
* Fix: Correct global flock fallbacks (#1834) (Timothy Southwick @NickNackGus)
* Feature: Support fcron (#610)
* Refactor: General tab and its Schedule section
* Refactor: Remove class OrderedSet
* Refactor: Remove os.system() from class Execute

Version 1.5.2 (2024-08-06)
* Fix: Ensure crontab with ending newline (#781)
* Fix(translation): Correct corrupt translated strings in Basque, Islandic and Spanish causing application crashes (#1828)
* Build(translation): Language helper script processing syntax checks on po-files

Version 1.5.1 (2024-07-27)
* Fix: Use correct port to ping SSH Proxy (#1815)

Version 1.5.0 (2024-07-26)
* Dependency: Migration to PyQt6
* Breaking Change: EncFS deprecation warning (#1735, #1734)
* Breaking Change: GUI started with --debug does no longer add --debug to the crontab for scheduled profiles.
                   Use the new "enable logging for debug messages" in the 'Schedule' section of the 'Manage profiles' GUI instead.
* Feature: Warn if Cron is not running (#1747)
* Feature: Profile and GUI allow to activate debug output for scheduled jobs by adding '--debug' to crontab entry (#1616, contributed by @stcksmsh Kosta Vukicevic)
* Feature: Support SSH proxy (jump) host (#1688) (@cgrinham, Christie Grinham)
* Feature: Support rsync '--one-file-system' in Expert Options (#1598)
* Feature: "*-dev" version strings contain last commit hash (#1637)
* Fix: Global flock fallback to single-user mode if insufficient permissions (#1743, #1751)
* Fix: Fix Qt segmentation fault with uninstall ExtraMouseButtonEventFilter when closing main window (#1095)
* Fix: Names of weekdays and months translated correct (#1729)
* Fix: Global flock for multiple users (#1122, #1676)
* Fix bug: "Backup folders" list does reflect the selected snapshot (#1585) (@rafaelhdr Rafael Hurpia da Rocha)