@@ -1,62 +1,73 @@
-#    Back In Time
-#    Copyright (C) 2008-2022 Oprea Dan, Bart de Koning, Richard Bailey, Germar Reitze
+# SPDX-FileCopyrightText: © 2008-2022 Oprea Dan
+# SPDX-FileCopyrightText: © 2008-2022 Bart de Koning
+# SPDX-FileCopyrightText: © 2008-2022 Richard Bailey
+# SPDX-FileCopyrightText: © 2008-2022 Germar Reitze
+# SPDX-FileCopyrightText: © 2021 Felix Stupp
 #
-#    This program is free software; you can redistribute it and/or modify
-#    it under the terms of the GNU General Public License as published by
-#    the Free Software Foundation; either version 2 of the License, or
-#    (at your option) any later version.
+# SPDX-License-Identifier: GPL-2.0-or-later
 #
-#    This program is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU General Public License for more details.
-#
-#    You should have received a copy of the GNU General Public License along
-#    with this program; if not, write to the Free Software Foundation, Inc.,
-#    51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-
-
-import os
+# This file is part of the program "Back In Time" which is released under GNU
+# General Public License v2 (GPLv2). See file/folder LICENSE or go to
+# <https://spdx.org/licenses/GPL-2.0-or-later.html>.
+"""Notify plugin module"""
+import getpass
+import dbus
 import pluginmanager
-import subprocess
+import logger
 
 
 class NotifyPlugin(pluginmanager.Plugin):
-    def __init__(self):
-        self.user = ''
+    """Plugin used to create notification bubbles in systray.
 
-        try:
-            self.user = os.getlogin()
-        except:
-            pass
-
-        if not self.user:
-            try:
-                self.user = os.environ['USER']
-            except:
-                pass
-
-        if not self.user:
-            try:
-                self.user = os.environ['LOGNAME']
-            except:
-                pass
+    The plugin use DBUS to send notifications. See its base class for more
+    details.
+    """
 
     def isGui(self):
         return True
 
-    def message(self, profile_id, profile_name, level, message, timeout):
-        if 1 == level:
-            cmd = ['notify-send']
-            if timeout > 0:
-                cmd.extend(['-t', str(1000 * timeout)])
+    # pylint: disable-next=too-many-arguments,too-many-positional-arguments
+    def message(self,
+                profile_id,
+                profile_name,
+                level,
+                message,
+                timeout):
+        # 1 is ERROR, 0 is INFO
+        if level != 1:
+            # Dev note (2024-10, buhtz):
+            # Message with level 0/INFO for example generatet by
+            # setTakeSnapshotMessage()
+            # Not clear to me why the notify plugin should only process
+            # errors.
+            return
 
-            title = "Back In Time (%s) : %s" % (self.user, profile_name)
-            message = message.replace("\n", ' ')
-            message = message.replace("\r", '')
+        try:
+            notify_interface = dbus.Interface(
+                object=dbus.SessionBus().get_object(
+                    "org.freedesktop.Notifications",
+                    "/org/freedesktop/Notifications"),
+                dbus_interface="org.freedesktop.Notifications"
+            )
 
-            cmd.append(title)
-            cmd.append(message)
-            print(' '.join(cmd))
-            subprocess.Popen(cmd).communicate()
-        return
+        except dbus.exceptions.DBusException as exc:
+            logger.error('Unexpected DBusException while initiating '
+                         f'dbus.Interface(): {exc}')
+            return
+
+        if timeout > 0:
+            timeout = 1000 * timeout
+        else:
+            # let timeout default to notification server settings
+            timeout = -1
+
+        title = f'Back In Time ({getpass.getuser()}) : {profile_name}'
+        message = message.replace('\n', ' ')
+        message = message.replace('\r', '')
+
+        try:
+            notify_interface.Notify(
+                'Back In Time', 0, '', title, message, [], {}, timeout)
+
+        except dbus.exceptions.DBusException as exc:
+            logger.error(f'Unexpected DBusException while Notify(): {exc}')
