@@ -12,6 +12,8 @@ Version 1.5.3-dev (development of upcoming release)
 * Refactor: General tab and its Schedule section
 * Refactor: Remove class OrderedSet
 * Refactor: Remove os.system() from class Execute
+* Refactor: Systray notifications send utilize DBUS instead of notify-send (#1156) (Felix Stupp @Zocker1999NET)
+* Dependency: Remove libnotify-bin (notify-send) (#1156)
 
 Version 1.5.2 (2024-08-06)
 * Fix: Ensure crontab with ending newline (#781)
@@ -117,6 +119,7 @@ Version 1.4.0 (2023-09-14)
 * Feature: Rearranged menu bar and its entries in the main window (#1487, #1478).
 * Feature: Configure user interface language via config file and GUI.
 * Documentation: Removed outdated docbook (#1345).
+* Testing: TravisCI now can use dbus
 * Build: Introduced .readthedocs.yaml as asked by ReadTheDocs.org (#1443).
 * Dependency: The oxygen icons should be installed with the BiT Qt GUI since they are used as fallback in case of missing icons
 * Fix bug: Add support for ChainerBackend class as keyring which iterates over all supported keyring backends (#1410)
